fix(www): fixes visual bug with spacing in design documents

--- a/www/app/globals.scss
+++ b/www/app/globals.scss
@@ -143,3 +143,23 @@ a {
 		z-index: 0;
 	}
 }
+
+.clay-docs-design h2,
+.clay-docs-design h1 {
+	margin-top: 3rem !important;
+	margin-bottom: 1.5rem !important;
+}
+
+.clay-docs-design h3 {
+	margin-top: 1.5rem !important;
+	margin-bottom: 1rem !important;
+}
+
+.clay-docs-design h4 {
+	margin-top: 1rem !important;
+	margin-bottom: 0.5rem !important;
+}
+
+.clay-docs-design img {
+	margin-bottom: 1rem;
+}
